--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.17.3",
     "jest": "^28.1.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
     "sequelize": "^6.21.0"
   },
   "scripts": {
@@ -17,7 +18,6 @@
   "description": "project 2",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "tbd"
