--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "jest": "^28.1.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-auth0": "^1.4.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.21.0"
   },
   "scripts": {
