Changed occurences of post_url to post_text since they will be posting reviews not urls

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node seeds/index.js"
   },
   "name": "project2",
   "description": "project 2",
