--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "fetch": "^1.1.0",
     "jest": "^28.1.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
